gcp/kubernetes/backend-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: social-proof-app-service-https
  namespace: social-proof-system
  annotations:
    cloud.google.com/backend-config: '{"default": "social-proof-backend-config"}'
  labels:
    app: social-proof-app
    tier: frontend
    environment: staging
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: social-proof-app
